# DocStruct

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  requirements.txt  run-gui  setup.sh  shell.nix
.github/workflows/: ci.yml  docker-image.yml  gui-release.yml  release.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_LOG.md  README.ko.md  REFACTOR_SUMMARY.md  cli_usage.md  todo.md
gui/frontend/: app.js  index.html  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: main.rs
ocr/bridge/: ocr_bridge.py
scripts/: build-gui-app.sh  eval_accuracy.py  gui.sh  smoke.sh  test.sh  verify.sh
src/: lib.rs  main.rs  pipeline.rs
src/core/: confidence.rs  geometry.rs  mod.rs  model.rs  page_classifier.rs
src/export/: html_debug_export.rs  json_export.rs  markdown_export.rs  mod.rs  text_export.rs
src/fusion/: align.rs  compare.rs  finalize.rs  mod.rs  resolve.rs
src/ocr/: bridge.rs  layout_builder.rs  mod.rs  renderer.rs
src/parser/: docx_parser.rs  hangul.rs  layout_builder.rs  mod.rs  (+4 more)
test/: korean_test.aux
test_document_output/: document.json  document.md  document.txt  page_001.md  page_001.txt  page_002.md  page_002.txt  page_003.md  page_003.txt
test_output_twocolumn/: document.json  document.md  document.txt  page_002.md  page_002.txt
test_output_twocolumn_cli/: page_001.md  page_001.txt
test_output_twocolumn_cli_v2/: document.json  document.md  document.txt  page_001.md  page_001.txt  page_002.md  page_002.txt
tests/: integration.rs
(+13 files in other folders)
