[package]
name = "docstruct"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
strsim = "0.11"
html-escape = "0.2"
unicode-normalization = "0.1"

[dev-dependencies]
pretty_assertions = "1"
