[package]
name = "docstruct"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool for recovering document structure through Parser + OCR + Fusion pipeline"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
strsim = "0.11"
html-escape = "0.2"
unicode-normalization = "0.1"

[dev-dependencies]
pretty_assertions = "1"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/docstruct", dest = "/usr/bin/docstruct", mode = "755" },
]
[package.metadata.generate-rpm.requires]
tesseract = "*"
poppler-utils = "*"
python3 = "*"
