[package]
name = "docstruct-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
rfd = "0.15"
docstruct = { path = "../.." }
